Incorporate suggestions from jlaur
Signed-off-by: Paul Smedley <paul@smedley.id.au>